[package]
version = "0.1.0"
name = "my-todo-mvc"
repository = "https://github.com/real-cpf/todomvc-seed"
authors = ["realcpf <realcpf@163.com>"]
description = "App Description"
categories = ["category"]
license = "MIT"
readme = "./README.md"
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dev-dependencies]
wasm-bindgen-test = "0.3.18"

[dependencies]
serde = "1.0.112"
strum = "0.18.0"
strum_macros = "0.18.0"
ulid = { version = "0.3.3", features = ["serde"] }
seed = "0.8.0"
chrono={ version = "0.4.19",features = ["wasmbind","serde"]}



[profile.release]
lto = true
opt-level = 'z'
codegen-units = 1

[package.metadata.wasm-pack.profile.release]
wasm-opt = ['-Os']
